Fix broken style for breadcrumbs in page header
[3.1]

Cherry-pick to master

--- a/resources/stylesheets/component/common/pageheader.breadcrumbs.less
+++ b/resources/stylesheets/component/common/pageheader.breadcrumbs.less
@@ -2,10 +2,12 @@
 	.dropdown {
 		& > a {
 			padding: 0;
-			&:hover,
-			&:focus {
-				text-decoration: none;
-			}
+			.mixin-link-title-color(
+				@link-color,
+				@link-color-hover,
+				@link-color-new,
+				@link-color-new-hover
+			);
 		}
 		.btn:active, .btn.active {
 				box-shadow: none;
@@ -21,17 +23,16 @@
 			}
 		}
 
-		.dropdown-toggle {
-			color: @link-color;
+		& > a.dropdown-toggle {
 			margin-left: 0.3em;
 			padding-right: 0;
 			padding-left: 0;
+			width: 1rem;
 
-			&:hover,
-			&:focus {
-				color: @link-color;
-				text-decoration: none;
-			}
+			.mixin-link-color(
+					@page-header-breadcrumbs-dropdown-color,
+					@page-header-breadcrumbs-dropdown-color
+				);
 
 			&::before {
 				font-family: 'fontawesome';
@@ -42,25 +43,25 @@
 		}
 
 		.dropdown-menu {
-			& > ul {
-				list-style-type: none;
-				padding: 0;
-				margin: 0;
+			.mixin-box-shadow-secondary();
+			.mixin-dropdown-menu(
+					@page-header-breadcrumbs-dropdown-color,
+					@page-header-breadcrumbs-dropdown-bg-color,
+					@page-header-breadcrumbs-dropdown-color-hover,
+					@page-header-breadcrumbs-dropdown-bg-color-hover
+				);
+			.mixin-dropdown-menu-title-new(
+					@link-color-new,
+					@link-color-new-hover,
+					@page-header-breadcrumbs-dropdown-bg-color-hover
+				);
+			width: auto;
+			margin-top: 0.8rem;
 
-				& > li {
-					a {
-						display: block;
-						width: 100%;
-						min-height: 1.875rem;
-						line-height: 1.875rem;
-						padding-left: 0.5rem;
-						padding-right: 0.5rem;
-
-						&:hover {
-							text-decoration: none;
-						}
-					}
-				}
+			&::before {
+				color: @page-header-breadcrumbs-dropdown-bg-color-hover;
+				margin-top: -1px;
+				left: 1rem;
 			}
 		}
 	}
@@ -69,6 +70,14 @@
 #bs-breadcrumb-rootnode {
 	display: inline-block;
 	margin-right: 0.5rem;
+	a {
+		.mixin-link-title-color(
+			@link-color,
+			@link-color-hover,
+			@link-color-new,
+			@link-color-new-hover
+		);
+	}
 }
 
 #bs-page-discussion-button {
