--- a/resources/stylesheets/content/content.less
+++ b/resources/stylesheets/content/content.less
@@ -104,7 +104,8 @@
 	pre {
 		font-size: 0.9375rem;
 	}
-	a {
+	a,
+	a:link {
 		.mixin-link-title-color(
 				@link-color,
 				@link-color-hover,
